# Catch2-showcase

./: CMakeLists.txt  README.md  conanfile.txt
TestApp/: LibraryLoader.h  SomeClass.cpp  SomeClass.h  main.cpp
TestLib/: LibClass.cpp  LibClass.h
tests/TestApp/: runner.cpp  runner.h  test1.cpp  test2.cpp
tests/TestLib/: test_get_set.cpp
